# 2026-03-04_fishsense-headtail-dataset

./: .gitignore  main.ipynb  main.py  pyproject.toml
fishsense_headtail_dataset/: config.py
