[project]
name = "fishsense-headtail-dataset"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dynaconf>=3.2.12",
    "fishsense-api-sdk",
    "fishsense-meta",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "opencv-python>=4.13.0.92",
    "synology-api>=0.8.2",
    "tqdm>=4.67.3",
    "validators>=0.35.0",
]

[tool.uv.sources]
fishsense-api-sdk = { git = "https://github.com/UCSD-E4E/fishsense-api-sdk.git" }
fishsense-meta = { git = "https://github.com/UCSD-E4E/fishsense-core.git" }
